Refactor: align idioms and move row-table knowledge into the shared helpers